gen/androidpublisher/v2/cargo-errors.log
    Checking google-androidpublisher2 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/androidpublisher/v2/lib)
error[E0609]: no field `request` on type `resources::edits::apks::UploadRequestBuilder<'a, A>`
    --> androidpublisher/v2/lib/src/lib.rs:4245:67
     |
4245 |                     let request_json = ::serde_json::to_vec(&self.request)?;
     |                                                                   ^^^^^^^ help: a field with a similar name exists: `reqwest`

error[E0609]: no field `request` on type `resources::edits::bundles::UploadRequestBuilder<'a, A>`
    --> androidpublisher/v2/lib/src/lib.rs:4691:67
     |
4691 |                     let request_json = ::serde_json::to_vec(&self.request)?;
     |                                                                   ^^^^^^^ help: a field with a similar name exists: `reqwest`

error[E0609]: no field `request` on type `resources::edits::deobfuscationfiles::UploadRequestBuilder<'a, A>`
    --> androidpublisher/v2/lib/src/lib.rs:5016:67
     |
5016 |                     let request_json = ::serde_json::to_vec(&self.request)?;
     |                                                                   ^^^^^^^ help: a field with a similar name exists: `reqwest`

error[E0609]: no field `request` on type `resources::edits::expansionfiles::UploadRequestBuilder<'a, A>`
    --> androidpublisher/v2/lib/src/lib.rs:6638:67
     |
6638 |                     let request_json = ::serde_json::to_vec(&self.request)?;
     |                                                                   ^^^^^^^ help: a field with a similar name exists: `reqwest`

error[E0609]: no field `request` on type `resources::edits::images::UploadRequestBuilder<'a, A>`
    --> androidpublisher/v2/lib/src/lib.rs:7759:67
     |
7759 |                     let request_json = ::serde_json::to_vec(&self.request)?;
     |                                                                   ^^^^^^^ help: a field with a similar name exists: `reqwest`

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0609`.
error: Could not compile `google-androidpublisher2`.

To learn more, run the command again with --verbose.
